Description in english

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Łukasz Senator - Front-end developer</title>
   <base href="/">
-  <meta name="description" content="Robię fronty aplikacji webowych, sprawdź moje CV.">
+  <meta name="description" content="I make front-end of web apps. What can we do together?">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
